--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,25 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		<style>
+			body {
+				white-space: pre-line;
+			}
+			* {
+				display: block !important;
+			}
+		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<script type="module">
+			import { marked } from 'https://cdn.jsdelivr.net/npm/marked/lib/marked.esm.js';
+
+			document.body.addEventListener('DOMContentLoaded', () => {
+				document.body.querySelectorAll('.markdown').forEach(el => {
+					el.innerHTML = marked(el.textContent);
+				});
+			});
+		</script>
 	</body>
 </html>
